# Jobs

./: .env.example  .gitignore  alembic.ini  job.py  llm_calls.py  llm_client.py  main.py  pipeline.py  pyproject.toml  secrets.py  secrets_manager.py
alembic/: env.py
alembic/versions/: 001_create_users_table.py  002_create_job_tables.py  003_add_titles_to_users.py
app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
scraper/: __init__.py  job.py  llm_client.py  pipeline.py  prompts.py
scraper/scrapers/: __init__.py  indeed.py
scrapers/: indeed.py  job_scraper.py
static/: app.js
templates/: index.html  jobs.html
